@@ -33,6 +33,11 @@
     <condition property="os.family" value="windows">  
         <os family="windows"/>  
     </condition>  
+    
+    <condition property="os.family" value="mac">  
+        <os family="mac"/>  
+    </condition> 
+     
     <import file="build-${os.family}.xml"/> 
     
     <!-- Third party tools dependencies -->
@@ -91,8 +96,19 @@
         </copy>
 
         <property name="app.property.file" value="${zip-tmp}/${app.name}/etc/${app.name}.conf" />
-        <!-- for Japanese localized version add option:  -Duser.language=ja -->        
-        <property name="jvm.options" value="&quot;--branding ${app.name} -J-Xms24m -J-Xmx4G -J-XX:MaxPermSize=128M -J-Xverify:none -J-XX:+UseG1GC -J-XX:+UseStringDeduplication -J-Xdock:name=${app.title}&quot;" />
+        <!-- for Japanese localized version add option:  -Duser.language=ja -->
+        
+            
+            <if>
+                <equals arg1="${os.family}" arg2="mac"/>
+                <then>
+                    <property name="jvm.options" value="&quot;${jvm-value} -J-Xdock:name=${app.title}&quot;"/>
+                </then>
+                <else>
+                    <property name="jvm.options" value="&quot;${jvm-value}&quot;"/>
+                </else>
+            </if>
+                
         <propertyfile file="${app.property.file}">
             <!-- Note: can be higher on 64 bit systems, should be in sync with project.properties -->
             <entry key="default_options" value="@JVM_OPTIONS" />
